--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html> 
 <head>
     <title> </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <p>
-      
+       <div id="profile-container">
+            <img id="profile-image" src="wilda.jpeg" alt="profile image"/>
+            <h2 id="profile-name"> Nur Ismi Mutmainna </h2>
     </p>
 </body>
 </htm>
